fixed too wide issue

--- a/front-end/src/app/portfolio/page.module.css
+++ b/front-end/src/app/portfolio/page.module.css
@@ -1,5 +1,5 @@
 .main {
-  min-height: 100vh;
+  min-height: var(--main-height);
 }
 
 .main > .head {
